@@ -177,6 +177,38 @@ sub exit_signal_number {
     return $number;
 }
 
+my %pty_modes = (TTY_OP_END => 0, VINTR => 1, VQUIT => 2, VERASE => 3, VKILL => 4, VEOF => 5,
+                 VEOL => 6, VEOL2 => 7, VSTART => 8, VSTOP => 9, VSUSP => 10, VDSUSP => 11,
+                 VREPRINT => 12, VWERASE => 13, VLNEXT => 14, VFLUSH => 15, VSWTCH => 16, VSTATUS => 17,
+                 VDISCARD => 18, IGNPAR => 30, PARMRK => 31, INPCK => 32, ISTRIP => 33, INLCR => 34,
+                 IGNCR => 35, ICRNL => 36, IUCLC => 37, IXON => 38, IXANY => 39, IXOFF => 40,
+                 IMAXBEL => 41, ISIG => 50, ICANON => 51, XCASE => 52, ECHO => 53, ECHOE => 54,
+                 ECHOK => 55, ECHONL => 56, NOFLSH => 57, TOSTOP => 58, IEXTEN => 59, ECHOCTL => 60,
+                 ECHOKE => 61, PENDIN => 62, OPOST => 70, OLCUC => 71, ONLCR => 72, OCRNL => 73,
+                 ONOCR => 74, ONLRET => 75, CS7 => 90, CS8 => 91, PARENB => 92, PARODD => 93,
+                 TTY_OP_ISPEED => 128, TTY_OP_OSPEED => 129);
+
+sub pty {
+    my $self = shift;
+    if (defined $_[1] and ref $_[1] eq 'HASH') {
+        my $term = shift;
+        my $modes = shift;
+        my $packed = '';
+        while (my ($k, $v) = each %$modes) {
+            unless ($k =~ /^\d+$/) {
+                $k = $pty_modes{uc $k} // croak "Invalid pty mode key '$k'";
+            }
+            next if $k == 0; # ignore the TTY_OP_END marker
+            $k > 159 and croak "Invalid pty mode key '$k'";
+            $packed .= pack CN => $k, $v;
+        }
+        $self->_pty($term, "$packed\x00", @_);
+    }
+    else {
+        $self->_pty(@_);
+    }
+}
+
 # tie interface
 
 sub PRINT {
@@ -313,7 +345,14 @@ This method blocks until the remote side closes the channel.
 Request a terminal on a channel.
 
 C<terminal> is the type of emulation (e.g. vt102, ansi,
-etc...). C<modes> are the terminal mode modifiers.
+etc...).
+
+C<modes> are the terminal mode modifiers, for instance:
+
+    $c->pty('vt100', { echo => 0, vintr => ord('k') });
+
+The list of acceptable mode modifiers is available from the SSH Connection
+Protocol RFC (L<RFC4254|https://tools.ietf.org/html/rfc4254#section-8>).
 
 If provided, C<width> and C<height> are the width and height in
 characters (defaults to 80x24); if negative their absolute values
